# c--decorator-pattern

./: CMakeLists.txt  Makefile  README.md
src/: decorator-pattern-demo.cpp  decorator-pattern-small.cpp
src/app-lib/: CMakeLists.txt
src/app-lib/app/: double-my-concept-decorator.hpp  log-my-concept-decorator.hpp  my-concept.hpp  my-type.hpp
